--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Ennéagramme — Carte interactive</title>
-  <link rel="stylesheet" href="assets/css/app.css?v=3" />
+  <title>Ennéagramme</title>
+  <link rel="stylesheet" href="assets/css/app.css?v=4" />
 </head>
 <body>
   <div class="wrap">
     <header class="top">
       <div>
-        <h1>Ennéagramme — Carte interactive</h1>
-        <p>Clique un type pour voir un résumé, puis ouvre la fiche complète.</p>
+        <h1>Ennéagramme</h1>
+        <p>Clique sur un type pour voir un résumé, puis ouvrir la fiche complète.</p>
       </div>
       <div class="actions">
         <button id="btnReset" type="button">Réinitialiser</button>
@@ -53,18 +53,11 @@
           <div class="badge"><strong>Type</strong> <span id="badgeNum">—</span></div>
         </div>
 
-        <h2 id="typeTitle">Choisis un type</h2>
-        <p id="typeSubtitle" class="muted">Un résumé s’affichera ici + un lien vers la fiche complète.</p>
-
         <div class="card">
           <div class="miniGrid">
             <div class="mini">
-              <h3>Mot-clé</h3>
-              <p id="kw">—</p>
-            </div>
-            <div class="mini">
-              <h3>Thème</h3>
-              <p id="theme">—</p>
+              <h3>Centre</h3>
+              <p id="center">—</p>
             </div>
             <div class="mini">
               <h3>Peur</h3>
@@ -74,12 +67,18 @@
               <h3>Désir</h3>
               <p id="desire">—</p>
             </div>
+            <div class="mini">
+              <h3>Compulsion</h3>
+              <p id="compulsion">—</p>
+            </div>
           </div>
 
           <div class="route">
             <div class="chip"><span class="dot good"></span> Intégration <strong id="toIntegr">—</strong></div>
             <div class="chip"><span class="dot warn"></span> Désintégration <strong id="toDisint">—</strong></div>
           </div>
+
+          <p id="moveText" class="muted small">—</p>
 
           <div class="ctaRow">
             <a id="openFull" class="btn" href="type.html?type=1" aria-disabled="true">Voir la fiche complète</a>
@@ -89,6 +88,6 @@
     </main>
   </div>
 
-  <script src="assets/js/app.js?v=3"></script>
+  <script src="assets/js/app.js?v=4"></script>
 </body>
 </html>
