--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Ennéagramme</title>
-  <link rel="stylesheet" href="assets/css/app.css?v=7" />
+  <link rel="stylesheet" href="assets/css/app.css?v=8" />
 </head>
 <body>
   <div class="wrap">
@@ -73,27 +73,29 @@
             </div>
           </div>
 
-          <div class="route">
-            <div class="chip">
-              <div class="chipHead">
+          <div class="moveLines">
+            <div id="moveHealth" class="moveLine">
+              <div class="moveHead">
                 <span class="dot good"></span>
                 <strong>Intégration</strong>
                 <span class="muted">(santé)</span>
+                <span class="muted">→</span>
                 <strong id="toIntegr">—</strong>
-                :
+                <span class="muted">:</span>
               </div>
-              <div class="chipBody" id="moveHealthText">—</div>
+              <div class="moveBody" id="moveHealthText">—</div>
             </div>
 
-            <div class="chip">
-              <div class="chipHead">
+            <div id="moveStress" class="moveLine">
+              <div class="moveHead">
                 <span class="dot warn"></span>
                 <strong>Désintégration</strong>
                 <span class="muted">(stress)</span>
+                <span class="muted">→</span>
                 <strong id="toDisint">—</strong>
-                :
+                <span class="muted">:</span>
               </div>
-              <div class="chipBody" id="moveStressText">—</div>
+              <div class="moveBody" id="moveStressText">—</div>
             </div>
           </div>
 
@@ -105,6 +107,6 @@
     </main>
   </div>
 
-  <script src="assets/js/app.js?v=7"></script>
+  <script src="assets/js/app.js?v=8"></script>
 </body>
 </html>
