--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Ennéagramme</title>
-  <link rel="stylesheet" href="assets/css/app.css?v=8" />
+  <link rel="stylesheet" href="assets/css/app.css?v=9" />
 </head>
 <body>
   <div class="wrap">
@@ -34,16 +34,23 @@
             <circle class="ring" cx="350" cy="350" r="270"></circle>
             <circle class="innerRing" cx="350" cy="350" r="210"></circle>
 
-            <path class="hex" d="" id="hexPath"></path>
-            <path class="tri" d="" id="triPath"></path>
+            <g id="staticBg" class="staticBg">
+              <path class="hex" d="" id="hexPath"></path>
+              <path class="tri" d="" id="triPath"></path>
+
+              <g class="centers">
+                <path class="centerLine" d="M350 350 L350 120"></path>
+                <path class="centerLine" d="M350 350 L585 455"></path>
+                <path class="centerLine" d="M350 350 L115 455"></path>
+
+                <text class="centerLabel" x="350" y="255" text-anchor="middle">Tête</text>
+                <text class="centerLabel" x="468" y="415" text-anchor="middle">Cœur</text>
+                <text class="centerLabel" x="232" y="415" text-anchor="middle">Corps</text>
+              </g>
+            </g>
 
             <g id="arrowsLayer"></g>
             <g id="nodesLayer"></g>
-
-            <g opacity=".85">
-              <text x="350" y="344" text-anchor="middle" class="centerTitle">Intégration / Désintégration</text>
-              <text x="350" y="368" text-anchor="middle" class="centerSub">Clique un type</text>
-            </g>
           </svg>
         </div>
       </section>
