--- a/type.html
+++ b/type.html
@@ -1,433 +1,76 @@
-function qs(sel){ return document.querySelector(sel); }
-function qsa(sel){ return Array.from(document.querySelectorAll(sel)); }
-
-function getTypeParam(){
-  const p = new URLSearchParams(location.search);
-  const t = parseInt(p.get("type") || "1", 10);
-  return (t>=1 && t<=9) ? t : 1;
-}
-
-const TYPE = getTypeParam();
-const DATA_URL = `assets/data/type-${TYPE}.json?v=12`;
-
-const elTitle = qs("#typeTitle");
-const elSubtitle = qs("#typeSubtitle");
-
-const qType = qs("#qType");
-const qCenter = qs("#qCenter");
-const qWings = qs("#qWings");
-const qIntegr = qs("#qIntegr");
-const qDisint = qs("#qDisint");
-
-const sectionsGrid = qs("#sectionsGrid");
-const toc = qs("#toc");
-
-const drawer = qs("#drawer");
-const drawerOverlay = qs("#drawerOverlay");
-const drawerTitle = qs("#drawerTitle");
-const drawerSub = qs("#drawerSub");
-const drawerIcon = qs("#drawerIcon");
-const drawerContent = qs("#drawerContent");
-
-const btnClose = qs("#btnClose");
-const btnPin = qs("#btnPin");
-
-const searchBox = qs("#searchBox");
-const btnExpandAll = qs("#btnExpandAll");
-const btnCollapseAll = qs("#btnCollapseAll");
-
-let DATA = null;
-let pinned = false;
-let currentSectionId = null;
-
-function openDrawer(){
-  drawer.setAttribute("aria-hidden","false");
-  document.body.style.overflow = "hidden";
-}
-function closeDrawer(){
-  if (pinned) return;
-  drawer.setAttribute("aria-hidden","true");
-  document.body.style.overflow = "";
-  currentSectionId = null;
-}
-
-drawerOverlay?.addEventListener("click", closeDrawer);
-btnClose?.addEventListener("click", closeDrawer);
-
-btnPin?.addEventListener("click", ()=>{
-  pinned = !pinned;
-  btnPin.textContent = pinned ? "Désépingler" : "Épingler";
-});
-
-document.addEventListener("keydown", (e)=>{
-  if (e.key === "Escape") closeDrawer();
-});
-
-function safeStr(x){ return (x === null || x === undefined) ? "" : String(x); }
-
-function slug(s){
-  return safeStr(s)
-    .toLowerCase()
-    .normalize("NFD").replace(/[\u0300-\u036f]/g,"")
-    .replace(/[^a-z0-9]+/g,"-")
-    .replace(/(^-|-$)/g,"");
-}
-
-function normItem(it){
-  if (it === null || it === undefined) return null;
-
-  if (typeof it === "string"){
-    return { label: "—", value: it };
-  }
-
-  const out = { ...it };
-
-  if (!out.label && out.k) out.label = out.k;
-  if (!out.value && (out.v !== undefined)) out.value = out.v;
-  if (!out.value && (out.val !== undefined)) out.value = out.val;
-
-  if (Array.isArray(out.children)){
-    out.children = out.children.map(normItem).filter(Boolean);
-  }
-
-  return out;
-}
-
-function normSection(sec, idx){
-  const out = { ...sec };
-
-  out.title = out.title || out.name || `Section ${idx+1}`;
-  out.desc = out.desc || out.subtitle || out.hint || "Clique pour ouvrir";
-  out.icon = out.icon || "📌";
-  out.id = out.id || slug(out.title) || `sec-${idx+1}`;
-
-  if (Array.isArray(out.items)) out.items = out.items.map(normItem).filter(Boolean);
-  else out.items = [];
-
-  return out;
-}
-
-function normalizeData(raw){
-  if (!raw) return null;
-
-  const d = { ...raw };
-
-  const meta = d.quick || d.meta || {};
-
-  d._type = d.type || d.num || d.id || TYPE;
-
-  d._name =
-    d.name ||
-    d.title ||
-    d.subtitle ||
-    "";
-
-  d._tagline =
-    d.tagline ||
-    d.subtitle ||
-    "Fiche interactive";
-
-  d._quick = {
-    center: meta.center || meta.centre || d.center || "—",
-    wings: meta.wings || meta.ailes || "—",
-    integr: meta.integr || meta.integration || meta.intégration || "—",
-    disint: meta.disint || meta.desintegration || meta.désintégration || meta.disintegration || "—"
-  };
-
-  if (Array.isArray(d.sections)){
-    d.sections = d.sections.map(normSection);
-  }else{
-    d.sections = [];
-  }
-
-  return d;
-}
-
-function setHeader(d){
-  document.title = `Type ${d._type} • ${d._name || "—"}`;
-  elTitle.textContent = `Type ${d._type} • ${d._name || "—"}`;
-  elSubtitle.textContent = d._tagline || "Fiche interactive";
-
-  qType.textContent = d._type ?? "—";
-  qCenter.textContent = d._quick?.center || "—";
-  qWings.textContent = d._quick?.wings || "—";
-  qIntegr.textContent = d._quick?.integr || "—";
-  qDisint.textContent = d._quick?.disint || "—";
-}
-
-function storeKey(){ return `ennea_sections_order_type_${TYPE}`; }
-
-function applyOrder(sections){
-  const saved = localStorage.getItem(storeKey());
-  if (!saved) return sections;
-
-  try{
-    const ids = JSON.parse(saved);
-    const map = new Map(sections.map(s => [s.id, s]));
-    const ordered = [];
-    ids.forEach(id => { if (map.has(id)) ordered.push(map.get(id)); });
-    sections.forEach(s => { if (!ids.includes(s.id)) ordered.push(s); });
-    return ordered;
-  }catch{
-    return sections;
-  }
-}
-
-function saveOrderFromDOM(){
-  const ids = Array.from(sectionsGrid.querySelectorAll(".secCard")).map(c => c.dataset.id);
-  localStorage.setItem(storeKey(), JSON.stringify(ids));
-}
-
-function makeSecCard(s){
-  const div = document.createElement("div");
-  div.className = "secCard";
-  div.dataset.id = s.id;
-  div.draggable = true;
-
-  const icon = document.createElement("div");
-  icon.className = "secIcon";
-  icon.textContent = s.icon || "📌";
-
-  const meta = document.createElement("div");
-  meta.className = "secMeta";
-
-  const h = document.createElement("div");
-  h.className = "secTitle";
-  h.textContent = s.title;
-
-  const p = document.createElement("div");
-  p.className = "secDesc";
-  p.textContent = s.desc || "Clique pour ouvrir";
-
-  meta.appendChild(h);
-  meta.appendChild(p);
-
-  const drag = document.createElement("div");
-  drag.className = "secDrag";
-  drag.textContent = "⋮⋮";
-  drag.title = "Glisser pour réorganiser";
-
-  div.appendChild(icon);
-  div.appendChild(meta);
-  div.appendChild(drag);
-
-  div.addEventListener("click", (e)=>{
-    if (e.target === drag) return;
-    showSection(s.id);
-  });
-
-  div.addEventListener("dragstart", ()=>{
-    div.classList.add("dragging");
-  });
-  div.addEventListener("dragend", ()=>{
-    div.classList.remove("dragging");
-    saveOrderFromDOM();
-  });
-
-  return div;
-}
-
-function enableDnD(){
-  sectionsGrid.addEventListener("dragover", (e)=>{
-    e.preventDefault();
-    const dragging = sectionsGrid.querySelector(".secCard.dragging");
-    if (!dragging) return;
-
-    const after = getDragAfterElement(sectionsGrid, e.clientY);
-    if (after == null) sectionsGrid.appendChild(dragging);
-    else sectionsGrid.insertBefore(dragging, after);
-  });
-}
-
-function getDragAfterElement(container, y){
-  const els = [...container.querySelectorAll(".secCard:not(.dragging)")];
-  return els.reduce((closest, child)=>{
-    const box = child.getBoundingClientRect();
-    const offset = y - box.top - box.height / 2;
-    if (offset < 0 && offset > closest.offset) return { offset, element: child };
-    return closest;
-  }, { offset: Number.NEGATIVE_INFINITY, element: null }).element;
-}
-
-function renderTOC(sections){
-  toc.innerHTML = "";
-  sections.forEach(s=>{
-    const a = document.createElement("a");
-    a.href = "#";
-    a.addEventListener("click",(e)=>{ e.preventDefault(); showSection(s.id); });
-
-    const ic = document.createElement("span");
-    ic.className = "tIcon";
-    ic.textContent = s.icon || "📌";
-
-    const t = document.createElement("span");
-    t.textContent = s.title;
-
-    const small = document.createElement("span");
-    small.className = "tSmall";
-    small.textContent = (s.items?.length || 0) + " •";
-
-    a.appendChild(ic);
-    a.appendChild(t);
-    a.appendChild(small);
-
-    toc.appendChild(a);
-  });
-}
-
-function textMatch(hay, needle){
-  if (!needle) return true;
-  return safeStr(hay).toLowerCase().includes(needle.toLowerCase());
-}
-
-function nodeMatches(node, needle){
-  if (!needle) return true;
-  if (!node) return false;
-  const blob = safeStr(node.label) + " " + safeStr(node.value);
-  if (textMatch(blob, needle)) return true;
-  if (Array.isArray(node.children)) return node.children.some(ch => nodeMatches(ch, needle));
-  if (node.kind === "levels" && Array.isArray(node.levels)){
-    return node.levels.some(l => textMatch(`Niveau ${l.n} ${l.text}`, needle));
-  }
-  return false;
-}
-
-function makeNodeCard(node){
-  const card = document.createElement("div");
-  card.className = "nodeCard";
-
-  const head = document.createElement("div");
-  head.className = "nodeHead";
-
-  const title = document.createElement("h3");
-  title.className = "nodeTitle";
-  title.textContent = node.label || "—";
-
-  const caret = document.createElement("div");
-  caret.className = "nodeCaret";
-  caret.textContent = "Ouvrir";
-
-  head.appendChild(title);
-  head.appendChild(caret);
-
-  const value = document.createElement("div");
-  value.className = "nodeValue";
-  value.textContent = node.value || "";
-
-  const childrenWrap = document.createElement("div");
-  childrenWrap.className = "nodeChildren";
-
-  if (Array.isArray(node.children)){
-    node.children.forEach(ch=>{
-      childrenWrap.appendChild(makeNodeCard(ch));
-    });
-  }
-
-  if (node.kind === "levels" && Array.isArray(node.levels)){
-    const grid = document.createElement("div");
-    grid.className = "levels";
-    node.levels.forEach(l=>{
-      const b = document.createElement("button");
-      b.type = "button";
-      b.className = "levelBtn";
-      b.innerHTML = `<div class="levelNum">Niveau ${l.n}</div><div class="levelTxt">${safeStr(l.text)}</div>`;
-      b.addEventListener("click", ()=>{
-        card.classList.add("open");
-        value.style.display = "block";
-        value.textContent = `Niveau ${l.n} : ${safeStr(l.text)}`;
-      });
-      grid.appendChild(b);
-    });
-    childrenWrap.appendChild(grid);
-  }
-
-  head.addEventListener("click", ()=>{
-    card.classList.toggle("open");
-    const isOpen = card.classList.contains("open");
-    caret.textContent = isOpen ? "Fermer" : "Ouvrir";
-  });
-
-  const hasValue = !!safeStr(node.value).trim();
-  const hasChildren = (node.children && node.children.length) || (node.kind === "levels");
-  if (!hasValue && !hasChildren){
-    caret.textContent = "";
-  }
-
-  card.appendChild(head);
-  if (hasValue) card.appendChild(value);
-  if (hasChildren) card.appendChild(childrenWrap);
-
-  return card;
-}
-
-function expandAll(){
-  qsa(".nodeCard").forEach(c=>{
-    c.classList.add("open");
-    const caret = c.querySelector(".nodeCaret");
-    if (caret) caret.textContent = "Fermer";
-  });
-}
-function collapseAll(){
-  qsa(".nodeCard").forEach(c=>{
-    c.classList.remove("open");
-    const caret = c.querySelector(".nodeCaret");
-    if (caret && caret.textContent) caret.textContent = "Ouvrir";
-  });
-}
-
-btnExpandAll?.addEventListener("click", expandAll);
-btnCollapseAll?.addEventListener("click", collapseAll);
-
-function showSection(id){
-  const s = DATA.sections.find(x => x.id === id);
-  if (!s) return;
-
-  currentSectionId = id;
-
-  drawerIcon.textContent = s.icon || "📌";
-  drawerTitle.textContent = s.title;
-  drawerSub.textContent = s.desc || "";
-
-  drawerContent.innerHTML = "";
-
-  const needle = (searchBox.value || "").trim();
-
-  const items = (s.items || []).filter(it => nodeMatches(it, needle));
-
-  if (!items.length){
-    const empty = document.createElement("div");
-    empty.className = "nodeCard";
-    empty.textContent = needle ? "Aucun résultat dans cette rubrique." : "Rubrique vide pour l’instant.";
-    drawerContent.appendChild(empty);
-  }else{
-    items.forEach(it=> drawerContent.appendChild(makeNodeCard(it)));
-  }
-
-  openDrawer();
-}
-
-searchBox?.addEventListener("input", ()=>{
-  if (!DATA || !currentSectionId) return;
-  showSection(currentSectionId);
-});
-
-async function load(){
-  const res = await fetch(DATA_URL);
-  const raw = await res.json();
-
-  DATA = normalizeData(raw);
-
-  setHeader(DATA);
-
-  const sections = applyOrder(DATA.sections || []);
-  sectionsGrid.innerHTML = "";
-  sections.forEach(s => sectionsGrid.appendChild(makeSecCard(s)));
-
-  renderTOC(sections);
-  enableDnD();
-}
-
-load().catch(()=>{
-  elTitle.textContent = "Fichier manquant ou JSON invalide";
-  elSubtitle.textContent = `Crée ou corrige assets/data/type-${TYPE}.json`;
-});
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Fiche complète</title>
+  <link rel="stylesheet" href="assets/css/app.css?v=12" />
+  <link rel="stylesheet" href="assets/css/type.css?v=12" />
+</head>
+<body>
+  <div class="wrap typeWrap">
+    <header class="typeTop">
+      <a class="backBtn" href="index.html">Retour</a>
+
+      <div class="typeHead">
+        <h1 id="typeTitle">Fiche complète</h1>
+        <p id="typeSubtitle">—</p>
+      </div>
+
+      <div class="typeTools">
+        <input id="searchBox" type="search" placeholder="Rechercher dans la fiche…" />
+        <button id="btnExpandAll" type="button">Tout ouvrir</button>
+        <button id="btnCollapseAll" type="button">Tout fermer</button>
+      </div>
+    </header>
+
+    <section class="quickBar">
+      <div class="qChip"><span class="qK">Type</span><span class="qV" id="qType">—</span></div>
+      <div class="qChip"><span class="qK">Centre</span><span class="qV" id="qCenter">—</span></div>
+      <div class="qChip"><span class="qK">Ailes</span><span class="qV" id="qWings">—</span></div>
+      <div class="qChip"><span class="qK">Intégration</span><span class="qV" id="qIntegr">—</span></div>
+      <div class="qChip"><span class="qK">Désintégration</span><span class="qV" id="qDisint">—</span></div>
+    </section>
+
+    <main class="typeGrid">
+      <section class="sectionsPanel">
+        <h2 class="panelTitle">Catégories</h2>
+        <p class="panelHint">Clique une carte pour entrer dedans. Tu peux réorganiser les cartes en les glissant.</p>
+
+        <div id="sectionsGrid" class="sectionsGrid"></div>
+      </section>
+
+      <aside class="navPanel">
+        <h2 class="panelTitle">Sommaire</h2>
+        <div id="toc" class="toc"></div>
+      </aside>
+    </main>
+  </div>
+
+  <div id="drawer" class="drawer" aria-hidden="true">
+    <div class="drawerOverlay" id="drawerOverlay"></div>
+
+    <div class="drawerPanel" role="dialog" aria-modal="true" aria-label="Contenu de la rubrique">
+      <div class="drawerTop">
+        <div class="drawerTitleRow">
+          <div class="drawerIcon" id="drawerIcon">📌</div>
+          <div class="drawerTitles">
+            <div class="drawerTitle" id="drawerTitle">—</div>
+            <div class="drawerSub" id="drawerSub">—</div>
+          </div>
+        </div>
+        <div class="drawerActions">
+          <button id="btnPin" type="button">Épingler</button>
+          <button id="btnClose" type="button">Fermer</button>
+        </div>
+      </div>
+
+      <div class="drawerBody">
+        <div id="drawerContent" class="drawerContent"></div>
+      </div>
+    </div>
+  </div>
+
+  <script src="assets/js/type.js?v=12"></script>
+</body>
+</html>
