--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </section>
 
             <aside class="side" aria-live="polite">
-                <div class="badgerRow">
-                    <div class="badge"><strong>Type</strong> <span id="badgeNum"></span></div>
+                <div class="badgeRow">
+                    <div class="badge"><strong>Type</strong> <span id="badgeNum">—</span></div>
                 </div>
 
                 <div class="card">
